--- a/courses/geometry.html
+++ b/courses/geometry.html
@@ -7,7 +7,7 @@
     <meta content="geometry" property="og:title" />
     <meta content="geometry" property="twitter:title" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <link href="../css/style.css" rel="stylesheet" type="text/css" />
+    <link href="../css/styles.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -51,7 +51,7 @@
         </section>
     </section>
     <script src="../js/jquery.js" type="text/javascript"></script>
-    <script src="../js/script.js" type="text/javascript"></script>
+    <script src="../js/scripts.js" type="text/javascript"></script>
 </body>
 
 </html>
