--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
 	<script src="js/jquery.js" type="text/javascript"></script>
 	<script src="js/scripts.js" type="text/javascript"></script>
 	<script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+	<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "2b59abe89e5142ec95859b735f37fc48"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 
 </html>
