--- a/courses/geometry.html
+++ b/courses/geometry.html
@@ -52,6 +52,7 @@
     </section>
     <script src="../js/jquery.js" type="text/javascript"></script>
     <script src="../js/scripts.js" type="text/javascript"></script>
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "2b59abe89e5142ec95859b735f37fc48"}'></script>
 </body>
 
 </html>
