--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
 	<script src="js/scripts.js" type="text/javascript"></script>
 	<script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 	<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "2b59abe89e5142ec95859b735f37fc48"}'></script><!-- End Cloudflare Web Analytics -->
+	<script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+	<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </body>
 
 </html>
